--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-5",
   "version": "0.1.0",
-  "homepage": "https://github.com/VolodymyrBorshchuk/Social-Network.git",
+  "homepage": "https://VolodymyrBorshchuk.github.io/Social-Network",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
